[package]
name = "RustFL"
version = "0.2.1"
edition = "2021"
authors = ["Sharvani Chelumalla","Sai Pranavi Reddy Patlolla","Sainath Talakanti"]
description = "A model of Federated Learning using Rust"
license = "MIT"
repository = "https://github.com/Sharvani1291/RustFL"
readme = "README.md"
keywords = ["federated","noise","client","server","dp"]
include = ["src/*", "Cargo.toml"]

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]

[features]
default = ["tch"]  # Enable `tch` by default
docs-only = []     # Documentation-only build without `tch`



[dependencies]
#rustfl = "0.2.0"
#client-only
reqwest = { version = "0.12.7", features = ["json"] } #HTTP requests - High Level
rand="0.8.5" #Random number generator
rand_distr="0.4.3"
ndarray= "0.16.1"
fernet="0.2.2"
base64="0.22.1"

#client-server
#tch = "0.18.0"#Pytorch C++ API(libtorch)
tch = { version = "0.15.0", optional = true }
serde = { version = "1.0", features = ["derive"] } #Serialize/Deserialize data
serde_json = "1.0"
log = "0.4"#Logging replace in python
env_logger = "0.11.5"#logging implementation for log
tokio = { version = "1", features = ["full"] } #Asynchronous I/O backed applications

#server-only
actix-web = "4.9.0"

[[bin]]
name = "example_client"
path = "Example/example_client.rs"
[[bin]]
name = "example_server"
path = "Example/example_server.rs"
