[package]
name = "Example"
version = "0.1.0"
edition = "2021"

[dependencies]
RustFL = "0.2.2"
actix-web = "4.9.0"
log = "0.4"
serde_json = "1.0.132"
env_logger = "0.11.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }#Logging replace in python
tch = "0.15.0"

[[bin]]
name = "example_client"
path = "example_client.rs"
[[bin]]
name = "example_server"
path = "example_server.rs"
