[package]
name = "RustFL-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
RustFL = "0.2.1"
tch = "0.15.0"
actix-web = "4.9.0"
tokio = { version = "1", features = ["full"] } #Asynchronous I/O backed applications
libfuzzer-sys = "0.4.3"


[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"

[[bin]]
name = "fuzz_target_2"
path = "fuzz_targets/fuzz_target_2.rs"
